--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
+pandas = "^1.5.3"
+matplotlib = "^3.6.3"
+yfinance = "^0.2.9"
 
 [tool.poetry.dev-dependencies]
 
