--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,11 @@ yfinance = "^0.2.9"
 
 [tool.poetry.dev-dependencies]
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.1"
+patch = "^1.16"
+raises = "^0.2"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
