--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -82,7 +82,7 @@ jobs:
             pip install \
             --index-url https://test.pypi.org/simple/ \
             --extra-index-url https://pypi.org/simple \
-            gradecalculatorpy
+            StockSignals
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
