--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ sphinx-autoapi = "^2.0.1"
 sphinx-rtd-theme = "^1.1.1"
 myst-nb = {version = "^0.17.1", python = "^3.9"}
 pytest-cov = "^4.0.0"
+python-semantic-release = "^7.33.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
