--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,12 @@ myst-nb = {version = "^0.17.1", python = "^3.9"}
 pytest-cov = "^4.0.0"
 python-semantic-release = "^7.33.0"
 
+[tool.semantic_release]
+version_variable = "StockSignals/__init__.py:__version__"
+version_source = "commit"
+upload_to_pypi = "false"
+patch_without_tag = "true"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
