--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "stocksignals"
-#version = "0.1.0"
+version = "0.0.0"
 description = "Calculate buy/sell signal indicators for a stock!"
 authors = ["Ruslan Dimitrov, Robin Dhilon, Peng Zhang, Chenyang Wang"]
 license = "MIT"
